--- a/faq.html
+++ b/faq.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="shortcut icon" href="./img/logo_icon.png " type="image/x-icon">
-    <title>FreeBeatKits | FAQ's</title>
+    <title>FreeBeatKits | FAQ</title>
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Muli:300,400,500,600,700,800,900&display=swap" rel="stylesheet">
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="css/jquery-ui.min.css" type="text/css">
     <link rel="stylesheet" href="css/slicknav.min.css" type="text/css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
+    <link rel="stylesheet" href="css/animate.css">
 </head>
 
 <body>
@@ -86,7 +87,8 @@
                                         </table>
                                     </div>
                                     <div class="select-button">
-                                        <a href="#" class="primary-btn checkout-btn">DOWNLOAD</a>
+                                        <a href="./audio/808vol.1.zip" class="primary-btn checkout-btn"
+                                            download>DOWNLOAD</a>
                                     </div>
                                 </div>
                             </li>
@@ -102,14 +104,11 @@
                         <i class="ti-menu"></i>
                         <span>Categories</span>
                         <ul class="depart-hover">
-                            <li class="active"><a href="#">Drum Kits</a></li>
-                            <li><a href="#">Loop Kits</a></li>
-                            <li><a href="#">Flute Kits</a></li>
-                            <li><a href="#">Bass Kits</a></li>
-                            <li><a href="#">Bell Kits</a></li>
-                            <li><a href="#">Brass Kits</a></li>
-                            <li><a href="#">Guitar Kits</a></li>
-                            <li><a href="#">Xylophone Kits</a></li>
+                            <li class="active"><a href="./shop.html">All Categories</a></li>
+                            <li><a href="./shop.html">Drum Kits</a></li>
+                            <li><a href="./shop.html">Instrument Kits</a></li>
+                            <li><a href="./shop.html">Loop Kits</a></li>
+                            <li><a href="./shop.html">Bass Kits</a></li>
                         </ul>
                     </div>
                 </div>
@@ -228,7 +227,7 @@
                                     8
                                 </div>
                             </div>
-                            <a href="#">
+                            <a href="./blog-01.html">
                                 <h4>How To Be Creative During Quarantine</h4>
                             </a>
                             <p>Sed quia non numquam modi tempora indunt ut labore et dolore magnam aliquam quaerat </p>
@@ -249,7 +248,7 @@
                                     6
                                 </div>
                             </div>
-                            <a href="#">
+                            <a href="./blog-02.html">
                                 <h4>Sounding Mixing: What You Need To Know</h4>
                             </a>
                             <p>Sed quia non numquam modi tempora indunt ut labore et dolore magnam aliquam quaerat </p>
@@ -270,7 +269,7 @@
                                     2
                                 </div>
                             </div>
-                            <a href="#">
+                            <a href="./blog-03.html">
                                 <h4>Balancing The Bass In Your Music</h4>
                             </a>
                             <p>Sed quia non numquam modi tempora indunt ut labore et dolore magnam aliquam quaerat </p>
