--- a/blog-02.html
+++ b/blog-02.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zxx">
+<html lang="eng">
 
 <head>
     <meta charset="UTF-8">
@@ -7,7 +7,8 @@
     <meta name="keywords" content="Fashi, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Fashi | Template</title>
+    <link rel="shortcut icon" href="./img/logo_icon.png " type="image/x-icon">
+    <title>FreeBeatKits | Sounding Mixing: What You Need To Know</title>
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Muli:300,400,500,600,700,800,900&display=swap" rel="stylesheet">
@@ -22,6 +23,7 @@
     <link rel="stylesheet" href="css/jquery-ui.min.css" type="text/css">
     <link rel="stylesheet" href="css/slicknav.min.css" type="text/css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
+    <link rel="stylesheet" href="css/animate.css">
 </head>
 
 <body>
@@ -32,38 +34,6 @@
 
     <!-- Header Section Begin -->
     <header class="header-section">
-        <div class="header-top">
-            <div class="container">
-                <div class="ht-left">
-                    <div class="mail-service">
-                        <i class=" fa fa-envelope"></i>
-                        hello.colorlib@gmail.com
-                    </div>
-                    <div class="phone-service">
-                        <i class=" fa fa-phone"></i>
-                        +65 11.188.888
-                    </div>
-                </div>
-                <div class="ht-right">
-                    <a href="#" class="login-panel"><i class="fa fa-user"></i>Login</a>
-                    <div class="lan-selector">
-                        <select class="language_drop" name="countries" id="countries" style="width:300px;">
-                            <option value='yt' data-image="img/flag-1.jpg" data-imagecss="flag yt" data-title="English">
-                            </option>
-                            English</option>
-                            <option value='yu' data-image="img/flag-2.jpg" data-imagecss="flag yu"
-                                data-title="Bangladesh">German </option>
-                        </select>
-                    </div>
-                    <div class="top-social">
-                        <a href="#"><i class="ti-facebook"></i></a>
-                        <a href="#"><i class="ti-twitter-alt"></i></a>
-                        <a href="#"><i class="ti-linkedin"></i></a>
-                        <a href="#"><i class="ti-pinterest"></i></a>
-                    </div>
-                </div>
-            </div>
-        </div>
         <div class="container">
             <div class="inner-header">
                 <div class="row">
@@ -77,22 +47,19 @@
                     <div class="col-lg-7 col-md-7">
                         <div class="advanced-search">
                             <button type="button" class="category-btn">All Categories</button>
-                            <form action="#" class="input-group">
+                            <div class="input-group">
                                 <input type="text" placeholder="What do you need?">
                                 <button type="button"><i class="ti-search"></i></button>
-                            </form>
+                            </div>
                         </div>
                     </div>
                     <div class="col-lg-3 text-right col-md-3">
                         <ul class="nav-right">
-                            <li class="heart-icon"><a href="#">
+                            <li class="cart-price">Featured</li>
+                            <li class="cart-icon">
+                                <a href="#">
                                     <i class="icon_heart_alt"></i>
-                                    <span>1</span>
-                                </a>
-                            </li>
-                            <li class="cart-icon"><a href="#">
-                                    <i class="icon_bag_alt"></i>
-                                    <span>3</span>
+                                    <span>2</span>
                                 </a>
                                 <div class="cart-hover">
                                     <div class="select-items">
@@ -102,40 +69,29 @@
                                                     <td class="si-pic"><img src="img/select-product-1.jpg" alt=""></td>
                                                     <td class="si-text">
                                                         <div class="product-selected">
-                                                            <p>$60.00 x 1</p>
-                                                            <h6>Kabino Bedside Table</h6>
+                                                            <p>Vol 1</p>
+                                                            <h6>Bells Sound Pack</h6>
                                                         </div>
-                                                    </td>
-                                                    <td class="si-close">
-                                                        <i class="ti-close"></i>
                                                     </td>
                                                 </tr>
                                                 <tr>
                                                     <td class="si-pic"><img src="img/select-product-2.jpg" alt=""></td>
                                                     <td class="si-text">
                                                         <div class="product-selected">
-                                                            <p>$60.00 x 1</p>
-                                                            <h6>Kabino Bedside Table</h6>
+                                                            <p>Vol 1</p>
+                                                            <h6>Brass Sound Pack</h6>
                                                         </div>
-                                                    </td>
-                                                    <td class="si-close">
-                                                        <i class="ti-close"></i>
                                                     </td>
                                                 </tr>
                                             </tbody>
                                         </table>
                                     </div>
-                                    <div class="select-total">
-                                        <span>total:</span>
-                                        <h5>$120.00</h5>
-                                    </div>
                                     <div class="select-button">
-                                        <a href="#" class="primary-btn view-card">VIEW CARD</a>
-                                        <a href="#" class="primary-btn checkout-btn">CHECK OUT</a>
+                                        <a href="./audio/808vol.1.zip" class="primary-btn checkout-btn"
+                                            download>DOWNLOAD</a>
                                     </div>
                                 </div>
                             </li>
-                            <li class="cart-price">$150.00</li>
                         </ul>
                     </div>
                 </div>
@@ -146,42 +102,23 @@
                 <div class="nav-depart">
                     <div class="depart-btn">
                         <i class="ti-menu"></i>
-                        <span>All departments</span>
+                        <span>Categories</span>
                         <ul class="depart-hover">
-                            <li class="active"><a href="#">Women’s Clothing</a></li>
-                            <li><a href="#">Men’s Clothing</a></li>
-                            <li><a href="#">Underwear</a></li>
-                            <li><a href="#">Kid's Clothing</a></li>
-                            <li><a href="#">Brand Fashion</a></li>
-                            <li><a href="#">Accessories/Shoes</a></li>
-                            <li><a href="#">Luxury Brands</a></li>
-                            <li><a href="#">Brand Outdoor Apparel</a></li>
+                            <li class="active"><a href="./shop.html">All Categories</a></li>
+                            <li><a href="./shop.html">Drum Kits</a></li>
+                            <li><a href="./shop.html">Instrument Kits</a></li>
+                            <li><a href="./shop.html">Loop Kits</a></li>
+                            <li><a href="./shop.html">Bass Kits</a></li>
                         </ul>
                     </div>
                 </div>
                 <nav class="nav-menu mobile-menu">
                     <ul>
                         <li><a href="./index.html">Home</a></li>
-                        <li><a href="./shop.html">Shop</a></li>
-                        <li><a href="#">Collection</a>
-                            <ul class="dropdown">
-                                <li><a href="#">Men's</a></li>
-                                <li><a href="#">Women's</a></li>
-                                <li><a href="#">Kid's</a></li>
-                            </ul>
-                        </li>
+                        <li><a href="./shop.html">Collection</a></li>
                         <li><a href="./blog.html">Blog</a></li>
-                        <li><a href="./check-out.html">Contact</a></li>
-                        <li><a href="#">Pages</a>
-                            <ul class="dropdown">
-                                <li><a href="./blog-details.html">Blog Details</a></li>
-                                <li><a href="./shopping-cart.html">Shopping Cart</a></li>
-                                <li><a href="./check-out.html">Checkout</a></li>
-                                <li><a href="./faq.html">Faq</a></li>
-                                <li><a href="./register.html">Register</a></li>
-                                <li><a href="./login.html">Login</a></li>
-                            </ul>
-                        </li>
+                        <li><a href="./faq.html">FAQ's</a></li>
+                        <li><a href="./contact.html">Contact</a></li>
                     </ul>
                 </nav>
                 <div id="mobile-menu-wrap"></div>
@@ -197,11 +134,11 @@
                 <div class="col-lg-12">
                     <div class="blog-details-inner">
                         <div class="blog-detail-title">
-                            <h2>The Personality Trait That Makes People Happier</h2>
-                            <p>travel <span>- May 19, 2019</span></p>
+                            <h2>Sounding Mixing: What You Need To Know</h2>
+                            <p>Sound <span>- March 11, 2020</span></p>
                         </div>
                         <div class="blog-large-pic">
-                            <img src="img/blog/blog-detail.jpg" alt="">
+                            <img src="img/blog/blog-02.jpg" alt="">
                         </div>
                         <div class="blog-detail-desc">
                             <p>psum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
@@ -240,9 +177,9 @@
                             <div class="details-tag">
                                 <ul>
                                     <li><i class="fa fa-tags"></i></li>
-                                    <li>Travel</li>
-                                    <li>Beauty</li>
-                                    <li>Fashion</li>
+                                    <li>Sound</li>
+                                    <li>Music</li>
+                                    <li>Productivity</li>
                                 </ul>
                             </div>
                             <div class="blog-share">
@@ -250,7 +187,6 @@
                                 <div class="social-links">
                                     <a href="#"><i class="fa fa-facebook"></i></a>
                                     <a href="#"><i class="fa fa-twitter"></i></a>
-                                    <a href="#"><i class="fa fa-google-plus"></i></a>
                                     <a href="#"><i class="fa fa-instagram"></i></a>
                                     <a href="#"><i class="fa fa-youtube-play"></i></a>
                                 </div>
@@ -259,26 +195,26 @@
                         <div class="blog-post">
                             <div class="row">
                                 <div class="col-lg-5 col-md-6">
-                                    <a href="#" class="prev-blog">
+                                    <a href="./blog-01.html" class="prev-blog">
                                         <div class="pb-pic">
                                             <i class="ti-arrow-left"></i>
-                                            <img src="img/blog/prev-blog.png" alt="">
+                                            <img src="img/blog/blog-cir.png" alt="">
                                         </div>
                                         <div class="pb-text">
                                             <span>Previous Post:</span>
-                                            <h5>The Personality Trait That Makes People Happier</h5>
+                                            <h5>Balancing The Bass In Your Music</h5>
                                         </div>
                                     </a>
                                 </div>
                                 <div class="col-lg-5 offset-lg-2 col-md-6">
-                                    <a href="#" class="next-blog">
+                                    <a href="./blog-03.html" class="next-blog">
                                         <div class="nb-pic">
-                                            <img src="img/blog/next-blog.png" alt="">
+                                            <img src="img/blog/prev-blog.png" alt="">
                                             <i class="ti-arrow-right"></i>
                                         </div>
                                         <div class="nb-text">
                                             <span>Next Post:</span>
-                                            <h5>The Personality Trait That Makes People Happier</h5>
+                                            <h5>Sounding Mixing: What You Need To Know</h5>
                                         </div>
                                     </a>
                                 </div>
@@ -289,8 +225,8 @@
                                 <img src="img/blog/post-by.png" alt="">
                             </div>
                             <div class="pb-text">
-                                <a href="#">
-                                    <h5>Shane Lynch</h5>
+                                <a href="./contact.html">
+                                    <h5>DJ Sound</h5>
                                 </a>
                                 <p>Aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
                                     velit esse cillum bore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
@@ -321,6 +257,7 @@
                             <a href="#"><i class="fa fa-instagram"></i></a>
                             <a href="#"><i class="fa fa-twitter"></i></a>
                             <a href="#"><i class="fa fa-pinterest"></i></a>
+                            <a href="#"><i class="fa fa-youtube-play"></i></a>
                         </div>
                     </div>
                 </div>
