--- a/blog-03.html
+++ b/blog-03.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="shortcut icon" href="./img/logo_icon.png " type="image/x-icon">
-    <title>FreeBeatKits | Contact</title>
+    <title>FreeBeatKits | Sounding Mixing: What You Need To Know</title>
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Muli:300,400,500,600,700,800,900&display=swap" rel="stylesheet">
@@ -127,148 +127,118 @@
     </header>
     <!-- Header End -->
 
-    <!-- Breadcrumb Section Begin -->
-    <div class="breacrumb-section">
+    <!-- Blog Details Section Begin -->
+    <section class="blog-details spad">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <div class="breadcrumb-text">
-                        <a href="#"><i class="fa fa-home"></i> Home</a>
-                        <span>Contact</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Breadcrumb Section Begin -->
-
-    <!-- Contact Section Begin -->
-    <section class="contact-section spad">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="contact-form">
-                        <div class="leave-comment">
-                            <h4>Leave A Comment</h4>
-                            <p>Our staff will call back later and answer your questions.</p>
-                            <form action="./php/emailForm.php" method="post" name="form" class="comment-form">
-                                <div class="row">
-                                    <div class="col-lg-6">
-                                        <input type="text" name="name" class="form-control" placeholder="Your Name">
-                                    </div>
-                                    <div class="col-lg-6">
-                                        <input type="text" name="email" class="form-control" placeholder="Your Email">
-                                    </div>
-                                    <div class="col-lg-12">
-                                        <textarea name="msg" placeholder="Your Message"></textarea>
-                                        <button type="submit" name="submit" class="site-btn">Send message</button>
-                                    </div>
-                                </div>
-                            </form>
+                    <div class="blog-details-inner">
+                        <div class="blog-detail-title">
+                            <h2>Balancing The Bass In Your Music</h2>
+                            <p>Sound <span>- March 4, 2020</span></p>
                         </div>
-                    </div>
-                </div>
-                <div class="col-lg-12  mt-5">
-                    <div class="contact-title">
-                        <h4>Contacts Us</h4>
-                        <p>Contrary to popular belief, Lorem Ipsum is simply random text. It has roots in a piece of
-                            classical Latin literature from 45 BC, maki years old.</p>
-                    </div>
-                    <div class="contact-widget col-lg-6">
-                        <div class="cw-item">
-                            <div class="ci-icon">
-                                <i class="ti-email"></i>
-                            </div>
-                            <div class="ci-text">
-                                <span>Email:</span>
-                                <p>djsound@freebeatkits.com</p>
+                        <div class="blog-large-pic">
+                            <img src="img/blog/blog-03.jpg" alt="">
+                        </div>
+                        <div class="blog-detail-desc">
+                            <p>psum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                                labore et dolore magna aliqua.Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                                laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure Lorem ipsum dolor sit
+                                amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                                magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                                aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate.
+                            </p>
+                        </div>
+                        <div class="blog-quote">
+                            <p>“ Technology is nothing. What's important is that you have a faith in people, that
+                                they're basically good and smart, and if you give them tools, they'll do wonderful
+                                things with them.” <span>- Steven Jobs</span></p>
+                        </div>
+                        <div class="blog-more">
+                            <div class="row">
+                                <div class="col-sm-4">
+                                    <img src="img/blog/blog-detail-1.jpg" alt="">
+                                </div>
+                                <div class="col-sm-4">
+                                    <img src="img/blog/blog-detail-2.jpg" alt="">
+                                </div>
+                                <div class="col-sm-4">
+                                    <img src="img/blog/blog-detail-3.jpg" alt="">
+                                </div>
                             </div>
                         </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Contact Section End -->
-
-    <!-- Latest Blog Section Begin -->
-    <section class="latest-blog spad">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="section-title">
-                        <h2>From The Blog</h2>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-4 col-md-6">
-                    <div class="single-latest-blog">
-                        <img src="img/latest-1.jpg" alt="">
-                        <div class="latest-text">
-                            <div class="tag-list">
-                                <div class="tag-item">
-                                    <i class="fa fa-calendar-o"></i>
-                                    March 15, 2020
-                                </div>
-                                <div class="tag-item">
-                                    <i class="fa fa-comment-o"></i>
-                                    8
+                        <p>Sum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                            et dolore magna aliqua.Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                            nisi ut aliquip ex ea commodo consequat. Duis aute irure Lorem ipsum dolor sit amet,
+                            consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                            aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                            ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate.</p>
+                        <div class="tag-share">
+                            <div class="details-tag">
+                                <ul>
+                                    <li><i class="fa fa-tags"></i></li>
+                                    <li>Lifestyle</li>
+                                    <li>Music</li>
+                                    <li>Productivity</li>
+                                </ul>
+                            </div>
+                            <div class="blog-share">
+                                <span>Share:</span>
+                                <div class="social-links">
+                                    <a href="#"><i class="fa fa-facebook"></i></a>
+                                    <a href="#"><i class="fa fa-twitter"></i></a>
+                                    <a href="#"><i class="fa fa-instagram"></i></a>
+                                    <a href="#"><i class="fa fa-youtube-play"></i></a>
                                 </div>
                             </div>
-                            <a href="./blog-01.html">
-                                <h4>How To Be Creative During Quarantine</h4>
-                            </a>
-                            <p>Sed quia non numquam modi tempora indunt ut labore et dolore magnam aliquam quaerat </p>
                         </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="single-latest-blog">
-                        <img src="img/latest-2.jpg" alt="">
-                        <div class="latest-text">
-                            <div class="tag-list">
-                                <div class="tag-item">
-                                    <i class="fa fa-calendar-o"></i>
-                                    March 11, 2020
+                        <div class="blog-post">
+                            <div class="row">
+                                <div class="col-lg-5 col-md-6">
+                                    <a href="./blog-02.html" class="prev-blog">
+                                        <div class="pb-pic">
+                                            <i class="ti-arrow-left"></i>
+                                            <img src="img/blog/next-blog.png" alt="">
+                                        </div>
+                                        <div class="pb-text">
+                                            <span>Previous Post:</span>
+                                            <h5>Sounding Mixing: What You Need To Know</h5>
+                                        </div>
+                                    </a>
                                 </div>
-                                <div class="tag-item">
-                                    <i class="fa fa-comment-o"></i>
-                                    6
+                                <div class="col-lg-5 offset-lg-2 col-md-6">
+                                    <a href="./blog-01.html" class="next-blog">
+                                        <div class="nb-pic">
+                                            <img src="img/blog/blog-cir.png" alt="">
+                                            <i class="ti-arrow-right"></i>
+                                        </div>
+                                        <div class="nb-text">
+                                            <span>Next Post:</span>
+                                            <h5>How To Be Creative During Quarantine</h5>
+                                        </div>
+                                    </a>
                                 </div>
                             </div>
-                            <a href="./blog-02.html">
-                                <h4>Sounding Mixing: What You Need To Know</h4>
-                            </a>
-                            <p>Sed quia non numquam modi tempora indunt ut labore et dolore magnam aliquam quaerat </p>
                         </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="single-latest-blog">
-                        <img src="img/latest-3.jpg" alt="">
-                        <div class="latest-text">
-                            <div class="tag-list">
-                                <div class="tag-item">
-                                    <i class="fa fa-calendar-o"></i>
-                                    March 4, 2020
-                                </div>
-                                <div class="tag-item">
-                                    <i class="fa fa-comment-o"></i>
-                                    2
-                                </div>
+                        <div class="posted-by">
+                            <div class="pb-pic">
+                                <img src="img/blog/post-by.png" alt="">
                             </div>
-                            <a href="./blog-03.html">
-                                <h4>Balancing The Bass In Your Music</h4>
-                            </a>
-                            <p>Sed quia non numquam modi tempora indunt ut labore et dolore magnam aliquam quaerat </p>
+                            <div class="pb-text">
+                                <a href="./contact.html">
+                                    <h5>DJ Sound</h5>
+                                </a>
+                                <p>Aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+                                    velit esse cillum bore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                                    amodo</p>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <!-- Latest Blog Section End -->
+    <!-- Blog Details Section End -->
 
     <!-- Footer Section Begin -->
     <footer class="footer-section">
@@ -287,6 +257,7 @@
                             <a href="#"><i class="fa fa-instagram"></i></a>
                             <a href="#"><i class="fa fa-twitter"></i></a>
                             <a href="#"><i class="fa fa-pinterest"></i></a>
+                            <a href="#"><i class="fa fa-youtube-play"></i></a>
                         </div>
                     </div>
                 </div>
@@ -297,8 +268,8 @@
                             <li><a href="./index.html">Home</a></li>
                             <li><a href="./shop.html">Collection</a></li>
                             <li><a href="./blog.html">Blog</a></li>
-                            <li><a href="./faq.html">FAQ's</a></li>
                             <li><a href="./contact.html">Contact</a></li>
+                            <li><a href="./faq.html">FAQ's</a></li>
                         </ul>
                     </div>
                 </div>
