--- a/blog.html
+++ b/blog.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="css/jquery-ui.min.css" type="text/css">
     <link rel="stylesheet" href="css/slicknav.min.css" type="text/css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
+    <link rel="stylesheet" href="css/animate.css">
 </head>
 
 <body>
@@ -86,7 +87,8 @@
                                         </table>
                                     </div>
                                     <div class="select-button">
-                                        <a href="#" class="primary-btn checkout-btn">DOWNLOAD</a>
+                                        <a href="./audio/808vol.1.zip" class="primary-btn checkout-btn"
+                                            download>DOWNLOAD</a>
                                     </div>
                                 </div>
                             </li>
@@ -102,14 +104,11 @@
                         <i class="ti-menu"></i>
                         <span>Categories</span>
                         <ul class="depart-hover">
-                            <li class="active"><a href="#">Drum Kits</a></li>
-                            <li><a href="#">Loop Kits</a></li>
-                            <li><a href="#">Flute Kits</a></li>
-                            <li><a href="#">Bass Kits</a></li>
-                            <li><a href="#">Bell Kits</a></li>
-                            <li><a href="#">Brass Kits</a></li>
-                            <li><a href="#">Guitar Kits</a></li>
-                            <li><a href="#">Xylophone Kits</a></li>
+                            <li class="active"><a href="./shop.html">All Categories</a></li>
+                            <li><a href="./shop.html">Drum Kits</a></li>
+                            <li><a href="./shop.html">Instrument Kits</a></li>
+                            <li><a href="./shop.html">Loop Kits</a></li>
+                            <li><a href="./shop.html">Bass Kits</a></li>
                         </ul>
                     </div>
                 </div>
@@ -152,44 +151,41 @@
                         <div class="blog-catagory">
                             <h4 class="fw-title">Categories</h4>
                             <ul class="filter-catagories">
-                                <li><a href="#">Drum Kits</a></li>
-                                <li><a href="#">Loop Kits</a></li>
-                                <li><a href="#">Flute Kits</a></li>
-                                <li><a href="#">Bass Kits</a></li>
-                                <li><a href="#">Bell Kits</a></li>
-                                <li><a href="#">Brass Kits</a></li>
-                                <li><a href="#">Guitar Kits</a></li>
-                                <li><a href="#">Xylophone Kits</a></li>
+                                <li><a href="./shop.html">All Categories</a></li>
+                                <li><a href="./shop.html">Drum Kits</a></li>
+                                <li><a href="./shop.html">Instrument Kits</a></li>
+                                <li><a href="./shop.html">Loop Kits</a></li>
+                                <li><a href="./shop.html">Bass Kits</a></li>
                             </ul>
                         </div>
                         <div class="recent-post">
                             <h4>Recent Post</h4>
                             <div class="recent-blog">
-                                <a href="#" class="rb-item">
+                                <a href="./blog-01.html" class="rb-item">
                                     <div class="rb-pic">
                                         <img src="img/latest-1.jpg" alt="">
                                     </div>
                                     <div class="rb-text">
                                         <h6>How To Be Creative During Quarantine</h6>
-                                        <p>Fashion <span>- March 15, 2020</span></p>
+                                        <p>Workflow <span>- March 15, 2020</span></p>
                                     </div>
                                 </a>
-                                <a href="#" class="rb-item">
+                                <a href="./blog-02.html" class="rb-item">
                                     <div class="rb-pic">
                                         <img src="img/latest-2.jpg" alt="">
                                     </div>
                                     <div class="rb-text">
                                         <h6>Sounding Mixing: What You Need To...</h6>
-                                        <p>Fashion <span>- March 11, 2020</span></p>
+                                        <p>Sound <span>- March 11, 2020</span></p>
                                     </div>
                                 </a>
-                                <a href="#" class="rb-item">
+                                <a href="./blog-03.html" class="rb-item">
                                     <div class="rb-pic">
                                         <img src="img/latest-3.jpg" alt="">
                                     </div>
                                     <div class="rb-text">
                                         <h6>Balancing The Bass In Your Music</h6>
-                                        <p>Fashion <span>- March 4, 2020</span></p>
+                                        <p>Sound <span>- March 4, 2020</span></p>
                                     </div>
                                 </a>
                             </div>
@@ -204,7 +200,7 @@
                                     <img src="img/latest-1.jpg" alt="">
                                 </div>
                                 <div class="bi-text">
-                                    <a href="#">
+                                    <a href="./blog-01.html">
                                         <h4>How To Be Creative During Quarantine</h4>
                                     </a>
                                     <p>WORKFLOW <span>- March 15, 2020</span></p>
@@ -217,7 +213,7 @@
                                     <img src="img/latest-2.jpg" alt="">
                                 </div>
                                 <div class="bi-text">
-                                    <a href="#">
+                                    <a href="./blog-02.html">
                                         <h4>Sounding Mixing: What You Need To Know</h4>
                                     </a>
                                     <p>SOUND <span>- March 11, 2020</span></p>
@@ -230,7 +226,7 @@
                                     <img src="img/latest-3.jpg" alt="">
                                 </div>
                                 <div class="bi-text">
-                                    <a href="#">
+                                    <a href="./blog-03.html">
                                         <h4>Balancing The Bass In Your Music</h4>
                                     </a>
                                     <p>SOUND <span>- March 4, 2020</span></p>
