--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="shortcut icon" href="./img/logo_icon.png " type="image/x-icon">
-    <title>FreeBeatKits</title>
+    <title>FreeBeatKits | Blog</title>
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Muli:300,400,500,600,700,800,900&display=swap" rel="stylesheet">
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="css/jquery-ui.min.css" type="text/css">
     <link rel="stylesheet" href="css/slicknav.min.css" type="text/css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
+    <link rel="stylesheet" href="css/animate.css">
 </head>
 
 <body>
@@ -86,7 +87,8 @@
                                         </table>
                                     </div>
                                     <div class="select-button">
-                                        <a href="#" class="primary-btn checkout-btn">DOWNLOAD</a>
+                                        <a href="./audio/808vol.1.zip" class="primary-btn checkout-btn"
+                                            download>DOWNLOAD</a>
                                     </div>
                                 </div>
                             </li>
@@ -102,14 +104,11 @@
                         <i class="ti-menu"></i>
                         <span>Categories</span>
                         <ul class="depart-hover">
-                            <li class="active"><a href="#">Drum Kits</a></li>
-                            <li><a href="#">Loop Kits</a></li>
-                            <li><a href="#">Flute Kits</a></li>
-                            <li><a href="#">Bass Kits</a></li>
-                            <li><a href="#">Bell Kits</a></li>
-                            <li><a href="#">Brass Kits</a></li>
-                            <li><a href="#">Guitar Kits</a></li>
-                            <li><a href="#">Xylophone Kits</a></li>
+                            <li class="active"><a href="./shop.html">All Categories</a></li>
+                            <li><a href="./shop.html">Drum Kits</a></li>
+                            <li><a href="./shop.html">Instrument Kits</a></li>
+                            <li><a href="./shop.html">Loop Kits</a></li>
+                            <li><a href="./shop.html">Bass Kits</a></li>
                         </ul>
                     </div>
                 </div>
@@ -139,7 +138,13 @@
                             <h1>Bells Sound Pack</h1>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
                                 incididunt ut labore et dolore</p>
-                            <a href="#" class="primary-btn">Download Now</a>
+                            <div class="preview">
+                                <a href="./audio/808vol.1.zip" class="primary-btn" download>Download Now</a>
+                                <audio id="player" src="./audio/808_03_ds.WAV"></audio>
+                                <div class="play-icon animated fadeInUp delay-1s">
+                                    <a onclick="document.getElementById('player').play()"><i class='fa fa-play'></i></a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -152,7 +157,13 @@
                             <h1>Brass Sound Pack</h1>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
                                 incididunt ut labore et dolore</p>
-                            <a href="#" class="primary-btn">Download Now</a>
+                            <div class="preview">
+                                <a href="./audio/808vol.1.zip" class="primary-btn" download>Download Now</a>
+                                <audio id="player" src="./audio/808_03_ds.WAV"></audio>
+                                <div class="play-icon animated fadeInUp delay-1s">
+                                    <a onclick="document.getElementById('player').play()"><i class='fa fa-play'></i></a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -217,11 +228,20 @@
                         <div class="product-item">
                             <div class="pi-pic">
                                 <img src="img/products/women-1.jpg" alt="">
-                                <div class="sale">Sale</div>
+                                <div class="sale">Featured</div>
                                 <ul>
-                                    <li class="w-icon active"><a href="#"><i class="icon_mail"></i></a></li>
-                                    <li class="quick-view"><a href="#">+ Download</a></li>
-                                    <li class="w-icon"><a href="#"><i class="fa fa-play"></i></a></li>
+                                    <li class="w-icon active"><a
+                                            href="mailto:?subject=Listen to this Freebeatkits Sound Pack!&amp;body=Check it out at: http://www.freebeatkits.com"><i
+                                                class="icon_mail"></i></a>
+                                    </li>
+                                    <li class="quick-view"><a href="./audio/808_03_ds.WAV" download>+ Download</a></li>
+                                    <li class="w-icon">
+                                        <audio id="player" src="./audio/808_03_ds.WAV"></audio>
+                                        <div>
+                                            <a onclick="document.getElementById('player').play()"><i
+                                                    class='fa fa-play'></i></a>
+                                        </div>
+                                    </li>
                                 </ul>
                             </div>
                             <div class="pi-text">
@@ -235,9 +255,18 @@
                             <div class="pi-pic">
                                 <img src="img/products/women-2.jpg" alt="">
                                 <ul>
-                                    <li class="w-icon active"><a href="#"><i class="icon_mail"></i></a></li>
-                                    <li class="quick-view"><a href="#">+ Download</a></li>
-                                    <li class="w-icon"><a href="#"><i class="fa fa-play"></i></a></li>
+                                    <li class="w-icon active"><a
+                                            href="mailto:?subject=Listen to this Freebeatkits Sound Pack!&amp;body=Check it out at: http://www.freebeatkits.com"><i
+                                                class="icon_mail"></i></a>
+                                    </li>
+                                    <li class="quick-view"><a href="./audio/808_03_ds.WAV" download>+ Download</a></li>
+                                    <li class="w-icon">
+                                        <audio id="player" src="./audio/808_03_ds.WAV"></audio>
+                                        <div>
+                                            <a onclick="document.getElementById('player').play()"><i
+                                                    class='fa fa-play'></i></a>
+                                        </div>
+                                    </li>
                                 </ul>
                             </div>
                             <div class="pi-text">
@@ -251,9 +280,18 @@
                             <div class="pi-pic">
                                 <img src="img/products/women-3.jpg" alt="">
                                 <ul>
-                                    <li class="w-icon active"><a href="#"><i class="icon_mail"></i></a></li>
+                                    <li class="w-icon active"><a
+                                            href="mailto:?subject=Listen to this Freebeatkits Sound Pack!&amp;body=Check it out at: http://www.freebeatkits.com"><i
+                                                class="icon_mail"></i></a>
+                                    </li>
                                     <li class="quick-view"><a href="#">+ Download</a></li>
-                                    <li class="w-icon"><a href="#"><i class="fa fa-play"></i></a></li>
+                                    <li class="w-icon">
+                                        <audio id="player" src="./audio/808_03_ds.WAV"></audio>
+                                        <div>
+                                            <a onclick="document.getElementById('player').play()"><i
+                                                    class='fa fa-play'></i></a>
+                                        </div>
+                                    </li>
                                 </ul>
                             </div>
                             <div class="pi-text">
@@ -267,9 +305,18 @@
                             <div class="pi-pic">
                                 <img src="img/products/women-4.jpg" alt="">
                                 <ul>
-                                    <li class="w-icon active"><a href="#"><i class="icon_mail"></i></a></li>
+                                    <li class="w-icon active"><a
+                                            href="mailto:?subject=Listen to this Freebeatkits Sound Pack!&amp;body=Check it out at: http://www.freebeatkits.com"><i
+                                                class="icon_mail"></i></a>
+                                    </li>
                                     <li class="quick-view"><a href="#">+ Download</a></li>
-                                    <li class="w-icon"><a href="#"><i class="fa fa-play"></i></a></li>
+                                    <li class="w-icon">
+                                        <audio id="player" src="./audio/808_03_ds.WAV"></audio>
+                                        <div>
+                                            <a onclick="document.getElementById('player').play()"><i
+                                                    class='fa fa-play'></i></a>
+                                        </div>
+                                    </li>
                                 </ul>
                             </div>
                             <div class="pi-text">
@@ -303,11 +350,20 @@
                         <div class="product-item">
                             <div class="pi-pic">
                                 <img src="img/products/man-1.jpg" alt="">
-                                <div class="sale">Sale</div>
+                                <div class="sale">Featured</div>
                                 <ul>
-                                    <li class="w-icon active"><a href="#"><i class="icon_mail"></i></a></li>
-                                    <li class="quick-view"><a href="#">+ Download</a></li>
-                                    <li class="w-icon"><a href="#"><i class="fa fa-play"></i></a></li>
+                                    <li class="w-icon active"><a
+                                            href="mailto:?subject=Listen to this Freebeatkits Sound Pack!&amp;body=Check it out at: http://www.freebeatkits.com"><i
+                                                class="icon_mail"></i></a>
+                                    </li>
+                                    <li class="quick-view"><a href="./audio/808vol.1.zip" download>+ Download</a></li>
+                                    <li class="w-icon">
+                                        <audio id="player" src="./audio/808_03_ds.WAV"></audio>
+                                        <div>
+                                            <a onclick="document.getElementById('player').play()"><i
+                                                    class='fa fa-play'></i></a>
+                                        </div>
+                                    </li>
                                 </ul>
                             </div>
                             <div class="pi-text">
@@ -321,9 +377,18 @@
                             <div class="pi-pic">
                                 <img src="img/products/man-2.jpg" alt="">
                                 <ul>
-                                    <li class="w-icon active"><a href="#"><i class="icon_mail"></i></a></li>
-                                    <li class="quick-view"><a href="#">+ Download</a></li>
-                                    <li class="w-icon"><a href="#"><i class="fa fa-play"></i></a></li>
+                                    <li class="w-icon active"><a
+                                            href="mailto:?subject=Listen to this Freebeatkits Sound Pack!&amp;body=Check it out at: http://www.freebeatkits.com"><i
+                                                class="icon_mail"></i></a>
+                                    </li>
+                                    <li class="quick-view"><a href="./audio/808vol.1.zip" download>+ Download</a></li>
+                                    <li class="w-icon">
+                                        <audio id="player" src="./audio/808_03_ds.WAV"></audio>
+                                        <div>
+                                            <a onclick="document.getElementById('player').play()"><i
+                                                    class='fa fa-play'></i></a>
+                                        </div>
+                                    </li>
                                 </ul>
                             </div>
                             <div class="pi-text">
@@ -337,9 +402,18 @@
                             <div class="pi-pic">
                                 <img src="img/products/man-3.jpg" alt="">
                                 <ul>
-                                    <li class="w-icon active"><a href="#"><i class="icon_mail"></i></a></li>
-                                    <li class="quick-view"><a href="#">+ Download</a></li>
-                                    <li class="w-icon"><a href="#"><i class="fa fa-play"></i></a></li>
+                                    <li class="w-icon active"><a
+                                            href="mailto:?subject=Listen to this Freebeatkits Sound Pack!&amp;body=Check it out at: http://www.freebeatkits.com"><i
+                                                class="icon_mail"></i></a>
+                                    </li>
+                                    <li class="quick-view"><a href="./audio/808vol.1.zip" download>+ Download</a></li>
+                                    <li class="w-icon">
+                                        <audio id="player" src="./audio/808_03_ds.WAV"></audio>
+                                        <div>
+                                            <a onclick="document.getElementById('player').play()"><i
+                                                    class='fa fa-play'></i></a>
+                                        </div>
+                                    </li>
                                 </ul>
                             </div>
                             <div class="pi-text">
@@ -353,9 +427,18 @@
                             <div class="pi-pic">
                                 <img src="img/products/man-4.jpg" alt="">
                                 <ul>
-                                    <li class="w-icon active"><a href="#"><i class="icon_mail"></i></a></li>
-                                    <li class="quick-view"><a href="#">+ Download</a></li>
-                                    <li class="w-icon"><a href="#"><i class="fa fa-play"></i></a></li>
+                                    <li class="w-icon active"><a
+                                            href="mailto:?subject=Listen to this Freebeatkits Sound Pack!&amp;body=Check it out at: http://www.freebeatkits.com"><i
+                                                class="icon_mail"></i></a>
+                                    </li>
+                                    <li class="quick-view"><a href="./audio/808vol.1.zip" download>+ Download</a></li>
+                                    <li class="w-icon">
+                                        <audio id="player" src="./audio/808_03_ds.WAV"></audio>
+                                        <div>
+                                            <a onclick="document.getElementById('player').play()"><i
+                                                    class='fa fa-play'></i></a>
+                                        </div>
+                                    </li>
                                 </ul>
                             </div>
                             <div class="pi-text">
@@ -403,7 +486,7 @@
                                     8
                                 </div>
                             </div>
-                            <a href="#">
+                            <a href="./blog-01.html">
                                 <h4>How To Be Creative During Quarantine</h4>
                             </a>
                             <p>Sed quia non numquam modi tempora indunt ut labore et dolore magnam aliquam quaerat </p>
@@ -424,7 +507,7 @@
                                     6
                                 </div>
                             </div>
-                            <a href="#">
+                            <a href="./blog-02.html">
                                 <h4>Sounding Mixing: What You Need To Know</h4>
                             </a>
                             <p>Sed quia non numquam modi tempora indunt ut labore et dolore magnam aliquam quaerat </p>
@@ -445,7 +528,7 @@
                                     2
                                 </div>
                             </div>
-                            <a href="#">
+                            <a href="./blog-03.html">
                                 <h4>Balancing The Bass In Your Music</h4>
                             </a>
                             <p>Sed quia non numquam modi tempora indunt ut labore et dolore magnam aliquam quaerat </p>
