--- a/message-sent.html
+++ b/message-sent.html
@@ -149,26 +149,13 @@
                 <div class="col-lg-12">
                     <div class="contact-form">
                         <div class="leave-comment">
-                            <h4>Leave A Comment</h4>
-                            <p>Our staff will call back later and answer your questions.</p>
-                            <form action="./php/emailForm.php" method="post" name="form" class="comment-form">
-                                <div class="row">
-                                    <div class="col-lg-6">
-                                        <input type="text" name="name" class="form-control" placeholder="Your Name">
-                                    </div>
-                                    <div class="col-lg-6">
-                                        <input type="text" name="email" class="form-control" placeholder="Your Email">
-                                    </div>
-                                    <div class="col-lg-12">
-                                        <textarea name="msg" placeholder="Your Message"></textarea>
-                                        <button type="submit" name="submit" class="site-btn">Send message</button>
-                                    </div>
-                                </div>
-                            </form>
+                            <h4>Message Sent!</h4>
+                            <p>We'll get back to you shortly.</p>
+                            <a href="./index.html" class="site-btn">Back Home</a>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-12  mt-5">
+                <div class="col-lg-12 mt-5">
                     <div class="contact-title">
                         <h4>Contacts Us</h4>
                         <p>Contrary to popular belief, Lorem Ipsum is simply random text. It has roots in a piece of
